Fixing table overflow in dataset page container

--- a/wp-open-data-toronto/style.css
+++ b/wp-open-data-toronto/style.css
@@ -744,6 +744,9 @@ table.hljs-ln tr:nth-child(even) {
     width: 90vw;
   }
 }
+#body-dataFeatures table {
+  table-layout: fixed;
+}
 
 #body-dataFeatures table tr td > p {
   margin: 0;
